# fabsim

./: .clang-format  .gitignore  CMakeLists.txt  README.md  codecov.yml
.github/workflows/: build.yml  coverage.yml  test.yml
cmake/: fabsim.cmake
include/fsim/: CompositeModel.h  DiscreteShell.h  ElasticMembrane.h  ElasticMembraneModel.h  ElasticRod.h  ElasticShell.h  ElementBase.h  HingeElement.h  IncompressibleNeoHookeanElement.h  IncompressibleNeoHookeanMembrane.h  LocalFrame.h  MassSpring.h  ModelBase.h  NeoHookeanElement.h  NeoHookeanMembrane.h  OrthotropicStVKElement.h  OrthotropicStVKMembrane.h  OrthotropicStVKModel.h  RodCollection.h  RodStencil.h  Spring.h  StVKElement.h  StVKMembrane.h  TriangleElement.h
include/fsim/util/: filter_var.h  finite_differences.h  first_fundamental_form.h  geometry.h  io.h  principal_directions_and_eigenvalues.h  run_and_measure.h  typedefs.h  vector_utils.h
src/: DiscreteShell.cpp  ElasticMembrane.cpp  ElasticRod.cpp  ElasticShell.cpp  HingeElement.cpp  IncompressibleNeoHookeanElement.cpp  LocalFrame.cpp  MassSpring.cpp  NeoHookeanElement.cpp  OrthotropicStVKElement.cpp  OrthotropicStVKMembrane.cpp  RodCollection.cpp  RodStencil.cpp  Spring.cpp  StVKElement.cpp
src/util/: filter_var.cpp  finite_differences.cpp  first_fundamental_form.cpp  geometry.cpp  io.cpp  principal_directions_and_eigenvalues.cpp
tests/: CMakeLists.txt  benchmarks.cpp  check_finite_differences.cpp  helpers.h  main.cpp  membranes.cpp  mesh.off  misc.cpp  rods.cpp  shells.cpp  springs.cpp  test_elastic.cpp  test_rod.cpp  test_shell.cpp  test_spring.cpp
